<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/computer_science"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/loginButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/button_register" />
    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginButtonLayout"
        android:hint="@string/password"
        android:textColor="#fff"
        android:textColorHint="#808080" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:hint="@string/username"
        android:textColor="#fff"
        android:textColorHint="#808080" />

</RelativeLayout>