<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    <LinearLayout android:id="@+id/al" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true" 
        android:layout_marginBottom="0dp" 
        android:gravity="center" 
        android:orientation="horizontal">
        <Button android:id="@+id/AddButtonPatterns" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:onClick="addpattern" android:text="@string/addpattern" 
            android:gravity="center"/>
        <Button android:id="@+id/AddButtonIP" 
            android:layout_width="190px" 
            android:layout_height="wrap_content"
            android:onClick="addip" 
            android:text="@string/addip" 
            android:gravity="center"/>
    </LinearLayout><EditText android:id="@+id/added" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
         android:layout_above="@+id/al" 
         android:layout_centerHorizontal="true" 
         android:gravity="center_horizontal"
          android:hint="@string/addhint" 
          android:textColor="#000" 
          android:textColorHint="#808080">
    </EditText><TextView android:id="@+id/addtext" 
        android:background="#FFF" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
          android:scrollbars="vertical"/>
</RelativeLayout>